--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "16.9.0",
-    "react-native": "0.61.4"
+    "react-native": "0.61.4",
+    "react-native-maps": "^0.26.1"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
