--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -186,13 +186,31 @@ dependencies {
             exclude group: 'com.google.android.gms', module: 'play-services-maps'
         }
         implementation 'com.google.android.gms:play-services-base:10.0.1'
-        implementation 'com.google.android.gms:play-services-maps:10.0.1' 
+        implementation 'com.google.android.gms:play-services-maps:10.0.1'
+        
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
         debugImplementation files(hermesPath + "hermes-debug.aar")
         releaseImplementation files(hermesPath + "hermes-release.aar")
     } else {
         implementation jscFlavor
+    }
+}
+
+allprojects {
+    repositories {
+        configurations.all {
+            resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+                def requested = details.requested
+                if (requested.group == 'com.google.android.gms') {
+                    details.useVersion '12.0.1'
+                }
+                if (requested.group == 'com.google.firebase') {
+                    details.useVersion '12.0.1'
+                }
+            }
+        }
+        // ... whatever else you have here already
     }
 }
 
