--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.0.2",
     "react": "16.9.0",
     "react-native": "0.61.4",
+    "react-native-android-location-enabler": "^1.2.0",
+    "react-native-geocoding": "^0.4.0",
     "react-native-maps": "^0.26.1",
-    "react-native-maps-directions": "^1.7.3"
+    "react-native-maps-directions": "^1.7.3",
+    "react-native-material-ripple": "^0.9.1",
+    "react-native-permissions": "^2.0.4",
+    "react-native-responsive-fontsize": "^0.4.2",
+    "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
